--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ jobs:
           command: |
             mkdir -p $HOME/scratch
             cd $HOME/scratch
-            bundle exec rails new ci_example -d postgresql -m $HOME/repo/template.rb \<< INPUT
+            BUNDLE_GEMFILE=$HOME/repo/Gemfile bundle exec rails new ci_example -d postgresql -m $HOME/repo/template.rb \<< INPUT
               ci.example.com
 
             INPUT
