Rename master branch to "main"

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,6 +88,6 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - main
     jobs:
       - generate
