--- a/overcommit.yml
+++ b/overcommit.yml
@@ -1,21 +1,4 @@
-# Use this file to configure the Overcommit hooks you wish to use. This will
-# extend the default configuration defined in:
-# https://github.com/brigade/overcommit/blob/master/config/default.yml
-#
-# At the topmost level of this YAML file is a key representing type of hook
-# being run (e.g. pre-commit, commit-msg, etc.). Within each type you can
-# customize each hook, such as whether to only run it on certain files (via
-# `include`), whether to only display output if it fails (via `quiet`), etc.
-#
-# For a complete list of hooks, see:
-# https://github.com/brigade/overcommit/tree/master/lib/overcommit/hook
-#
-# For a complete list of options that you can use to customize hooks, see:
-# https://github.com/brigade/overcommit#configuration
-#
-# Uncomment the following lines to make the configuration take effect.
-
-gemfile: Gemfile
+gemfile: false
 verify_signatures: false
 
 PreCommit:
@@ -23,9 +6,9 @@ PreCommit:
     enabled: true
 
   EsLint:
-    required_executable: yarn
     enabled: true
-    command: ["yarn", "eslint", "-f", "compact"]
+    required_executable: npx
+    command: ["npx", "--no-install", "eslint", "-f", "compact"]
     include:
       - app/javascript/**/*.js
       - app/javascript/**/*.jsx
@@ -44,6 +27,8 @@ PreCommit:
 
   RuboCop:
     enabled: true
+    required_executable: bundle
+    command: ["bundle", "exec", "rubocop"]
     on_warn: fail
 
   TrailingWhitespace:
@@ -52,6 +37,11 @@ PreCommit:
       - "**/db/structure.sql"
 
   YamlSyntax:
+    enabled: true
+    exclude:
+      - "test/fixtures/**/*.yml"
+
+  YarnCheck:
     enabled: true
 
 PostCheckout:
