Upgrade from postgres 12 to 13

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ executors:
           PGHOST: 127.0.0.1
           PGUSER: postgres
           PGPASS: postgres
-      - image: circleci/postgres:12-alpine
+      - image: circleci/postgres:13-ram
         environment:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
