Fix Node LTS install failure on CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@ jobs:
     steps:
       - node/install:
           install-yarn: true
-          install-npm: true
+          install-npm: false
           lts: true
       - checkout
       - restore_cache:
