Upgrade template to support Rails 7 (#30)
* WIP

* Remove YamlSyntax since it is broken with Ruby 3.1

* Improve npm script handling

* Clean up Gemfile entries

* Only emit scss files if --css=sass

* Update README for Rails 7

* Handle importmap-rails case

* More robust handling of layouts/application.html.erb

* Remove sass recommendation for now

* Ensure simpler package.json (no license, name)

* Switch to Node LTS

* Upgrade CI to Rails 7 and Ruby 3

* .env is not needed for CI

* Split security audits to separate CI job, rm cron

* Fix Node LTS install failure on CI

* No longer used

* Ensure app can be built and deployed on Linux

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ executors:
   ruby:
     working_directory: ~/repo
     docker:
-      - image: cimg/ruby:2.7.2-browsers
+      - image: cimg/ruby:3.0.3-browsers
         environment:
           PGHOST: 127.0.0.1
           PGUSER: postgres
@@ -24,7 +24,7 @@ jobs:
       - node/install:
           install-yarn: true
           install-npm: false
-          node-version: "16.13.0"
+          lts: true
       - checkout
       - restore_cache:
           name: Restore yarn cache
@@ -42,7 +42,7 @@ jobs:
       - run:
           name: Install railties
           command: |
-            gem install railties --version "~> 6.1.0" --no-document
+            gem install railties --version "~> 7.0.0" --no-document
       - run:
           name: Configure git
           command: |
