--- a/erb-lint.yml
+++ b/erb-lint.yml
@@ -15,3 +15,9 @@ linters:
         Enabled: false
       Layout/TrailingEmptyLines:
         Enabled: false
+      Lint/UselessAssignment:
+        Enabled: false
+      Naming/FileName:
+        Enabled: false
+      Rails/OutputSafety:
+        Enabled: false
