Try to fix bundler setup

--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -5,11 +5,6 @@ agent:
     type: e1-standard-2
     os_image: ubuntu2004
 global_job_config:
-  env_vars:
-    - name: BUNDLE_CLEAN
-      value: "true"
-    - name: BUNDLE_PATH
-      value: "./vendor/bundle"
   prologue:
     commands:
       - sem-version ruby 3.2
@@ -18,14 +13,18 @@ blocks:
   - name: Generate project
     dependencies: []
     task:
+      env_vars:
+        - name: BUNDLE_CLEAN
+          value: "true"
       jobs:
         - name: rails new
           commands:
             - checkout
             - git config --global user.name Semaphore
             - git config --global user.email ci@example.com
+            - git config --global init.defaultBranch main
             - gem install railties --version "~> 7.0.0" --no-document
-            - mkdir scratch
-            - cd scratch
-            - "rails new ci_example -d postgresql -m ../template.rb \<< INPUT\nci.example.com\n\nINPUT"
-            - artifact push workflow ci_example
+            - mkdir ~/scratch
+            - export BUNDLE_PATH=${HOME}/scratch/ci_example/vendor/bundle
+            - "rails new ~/scratch/ci_example -d postgresql -m template.rb \<< INPUT\nci.example.com\n\nINPUT"
+            - artifact push workflow ~/scratch/ci_example
