--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -13,24 +13,20 @@ blocks:
   - name: Generate project
     dependencies: []
     task:
-      env_vars:
-        - name: BUNDLE_PATH
-          value: "./vendor/bundle"
-        - name: BUNDLE_CLEAN
-          value: "true"
       jobs:
         - name: rails new
           commands:
             - checkout
+            - cache restore "gems-${SEMAPHORE_GIT_BRANCH}-,gems-main-"
             - git config --global user.name Semaphore
             - git config --global user.email ci@example.com
             - git config --global init.defaultBranch main
+            - bundle config set --global path $HOME/vendor/bundle
             - bundle init
             - echo 'gem "rails", "~> 7.0.0"' >> Gemfile
-            - bundle lock
-            - cache restore
-            - bundle check && bundle install
-            - cache store
+            - bundle check || bundle install
             - mkdir -p ~/scratch/ci_example
             - cd ~/scratch/ci_example
             - "rails new . -d postgresql -m template.rb \<< INPUT\nci.example.com\n\nINPUT"
+            - bundle clean
+            - cache store "gems-${SEMAPHORE_GIT_BRANCH}-$(checksum Gemfile.lock)" $HOME/vendor/bundle
