--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -36,3 +36,29 @@ blocks:
             - bundle clean --force
             - 'export RUBY_GEMS_DIR=$(ruby -e puts\ \`gem\ env\`\[/INSTALLATION\ DIRECTORY:\ \(.\*\)/,\ 1\])'
             - cache store "gems-${SEMAPHORE_GIT_WORKING_BRANCH}-$(checksum Gemfile.lock)" $RUBY_GEMS_DIR
+            - cd ..
+            - artifact push workflow ci_example
+  - name: Test
+    dependencies: ["Generate project"]
+    task:
+      env_vars:
+        - name: DATABASE_URL
+          value: "postgresql://postgres:@0.0.0.0:5432/test"
+      prologue:
+        commands:
+          - sem-service start postgres 14
+          - artifact pull workflow ci_example
+          - cd ci_example
+          - bundle exec rake db:create db:schema:load
+      epilogue:
+        commands:
+          - test-results publish ./reports
+      jobs:
+        - name: test
+          commands:
+            - bundle exec rake test TESTOPTS="--ci-dir=./reports"
+        - name: test:system
+          commands:
+            - mkdir -p ./tmp/screenshots
+            - bundle exec rake test:system TESTOPTS="--ci-dir=./reports"
+            - artifact push job ./tmp/screenshots
