--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -21,6 +21,7 @@ blocks:
       jobs:
         - name: rails new
           commands:
+            - export BUNDLE_PATH=$HOME/scratch/ci_example/vendor/bundle
             - cache restore "gems-${SEMAPHORE_GIT_WORKING_BRANCH}-,gems-main-"
             - sem-service start postgres 14
             - checkout
