--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -99,3 +99,84 @@ blocks:
         - name: bundle-audit
           commands:
             - bundle exec bundle-audit check --update -v
+  - name: Generate project with Vite
+    dependencies: []
+    task:
+      jobs:
+        - name: rails new
+          commands:
+            - sem-service start postgres 14
+            - checkout
+            - git config --global user.name Semaphore
+            - git config --global user.email ci@example.com
+            - git config --global init.defaultBranch main
+            - gem install railties --version "~> 7.0.0" --no-document
+            - gem install bundler --no-document
+            - mkdir -p ~/scratch/ci_example_vite
+            - cd ~/scratch/ci_example_vite
+            - cache restore "bundle-${SEMAPHORE_GIT_WORKING_BRANCH}-,bundle-main-"
+            - "rails new . --javascript vite -d postgresql -m ~/rails-template/template.rb \<< INPUT\nci.example.com\n\nINPUT"
+            - bundle clean
+            - cache store "bundle-${SEMAPHORE_GIT_WORKING_BRANCH}-$(checksum Gemfile.lock)" vendor/bundle
+            - rm -rf .git
+            - cd ..
+            - tar cfz ci_example_vite.tgz ci_example_vite
+            - artifact push workflow ci_example_vite.tgz
+  - name: Test with Vite
+    dependencies: ["Generate project with Vite"]
+    task:
+      prologue:
+        commands:
+          - sem-service start postgres 14
+          - artifact pull workflow ci_example_vite.tgz
+          - tar xfz ci_example_vite.tgz
+          - cd ci_example_vite
+          - bundle exec rake db:create db:schema:load
+      epilogue:
+        commands:
+          - test-results publish ./reports
+      jobs:
+        - name: test
+          commands:
+            - bundle exec rake test TESTOPTS="--ci-dir=./reports"
+        - name: test:system
+          commands:
+            - mkdir -p ./tmp/screenshots
+            - bundle exec rake test:system TESTOPTS="--ci-dir=./reports"
+            - artifact push job ./tmp/screenshots
+  - name: Lint with Vite
+    dependencies: ["Generate project with Vite"]
+    task:
+      prologue:
+        commands:
+          - artifact pull workflow ci_example_vite.tgz
+          - tar xfz ci_example_vite.tgz
+          - cd ci_example_vite
+      jobs:
+        - name: erblint
+          commands:
+            - bin/erblint --lint-all
+        - name: eslint
+          commands:
+            - yarn lint:js
+        - name: rubocop
+          commands:
+            - bin/rubocop
+        - name: stylelint
+          commands:
+            - yarn lint:css
+  - name: Security with Vite
+    dependencies: ["Generate project with Vite"]
+    task:
+      prologue:
+        commands:
+          - artifact pull workflow ci_example_vite.tgz
+          - tar xfz ci_example_vite.tgz
+          - cd ci_example_vite
+      jobs:
+        - name: brakeman
+          commands:
+            - bundle exec brakeman --exit-on-warn --no-progress --color --output /dev/stdout
+        - name: bundle-audit
+          commands:
+            - bundle exec bundle-audit check --update -v
