--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: ruby/setup-ruby@v1
         with:
           ruby-version: "ruby"
-      - uses: actions/setup-node@3
+      - uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
       - run: git config --global user.name 'github-actions[bot]'
