--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,12 +30,17 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: "lts/*"
-      - run: "TEMPLATE_HOME=`pwd`"
-      - run: git config --global user.name 'github-actions[bot]'
-      - run: git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-      - run: git config --global init.defaultBranch main
-      - run: gem install railties --version "~> 7.0.0" --no-document
-      - run: gem install bundler --no-document
-      - run: mkdir -p ~/scratch/ci_example
-      - run: cd ~/scratch/ci_example
-      - run: "rails new . -d postgresql -m $TEMPLATE_HOME/template.rb << INPUT\nci.example.com\n\nINPUT"
+      - shell: bash
+        run: |
+          TEMPLATE_HOME=`pwd`
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git config --global init.defaultBranch main
+          gem install railties --version "~> 7.0.0" --no-document
+          gem install bundler --no-document
+          mkdir -p ~/scratch/ci_example
+          cd ~/scratch/ci_example
+          rails new . -d postgresql -m $TEMPLATE_HOME/template.rb << INPUT
+          ci.example.com
+
+          INPUT
