--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
 env:
-  RAILS_ENV: test
+  BUNDLE_PATH: "./vendor/bundle"
 jobs:
   generate:
     name: "Generate App From Template"
@@ -31,6 +31,7 @@ jobs:
         with:
           node-version: "lts/*"
       - shell: bash
+        name: rails new
         run: |
           TEMPLATE_HOME=`pwd`
           git config --global user.name 'github-actions[bot]'
@@ -38,9 +39,16 @@ jobs:
           git config --global init.defaultBranch main
           gem install railties --version "~> 7.0.0" --no-document
           gem install bundler --no-document
-          mkdir -p ~/scratch/ci_example
-          cd ~/scratch/ci_example
+          mkdir -p ~/scratch/generated_app
+          cd ~/scratch/generated_app
           rails new . -d postgresql -m $TEMPLATE_HOME/template.rb << INPUT
           ci.example.com
 
           INPUT
+          rm -rf .git
+      - uses: actions/upload-artifact@v3
+        with:
+          name: system-test-screenshots
+          path: ~/scratch/generated_app
+          retention-days: 1
+          if-no-files-found: error
