Zip prior to upload

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,9 +46,10 @@ jobs:
 
           INPUT
           rm -rf .git
+          tar cfz ../generated_app.tgz .
       - uses: actions/upload-artifact@v3
         with:
           name: generated_app
-          path: ~/scratch/generated_app
+          path: ~/scratch/generated_app.tgz
           retention-days: 1
           if-no-files-found: error
