Add job that requires generated app

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,3 +53,16 @@ jobs:
           path: ~/scratch/generated_app.tgz
           retention-days: 1
           if-no-files-found: error
+  erblint:
+    name: "Lint / erblint"
+    runs-on: ubuntu-latest
+    needs: [generate]
+    steps:
+      - uses: actions/download-artifact@v3
+        with:
+          name: generated_app
+      - run: tar xvfz generated_app.tgz
+      - uses: ruby/setup-ruby@v1
+        with:
+          bundler-cache: true
+      - run: bin/erblint --lint-all
