--- a/github/workflows/ci.yml
+++ b/github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
       - uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
-      - run: bundle exec haml-lint
+      - run: bin/haml-lint
   erblint:
     name: "Lint / erblint"
     runs-on: ubuntu-latest
