--- a/.github/workflows/ci-vite.yml
+++ b/.github/workflows/ci-vite.yml
@@ -93,10 +93,10 @@ jobs:
           path: ./tmp/screenshots/
           retention-days: 7
           if-no-files-found: ignore
-  erblint:
-    name: "Lint / erblint"
+  haml-lint:
+    name: "Lint / HAML-Lint"
     runs-on: ubuntu-latest
-    needs: [generate]
+    needs: [ generate ]
     steps:
       - uses: actions/download-artifact@v3
         with:
@@ -105,7 +105,7 @@ jobs:
       - uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
-      - run: bin/erblint --lint-all
+      - run: bin/haml-lint
   eslint:
     name: "Lint / eslint"
     runs-on: ubuntu-latest
