--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,19 +93,19 @@ jobs:
           path: ./tmp/screenshots/
           retention-days: 7
           if-no-files-found: ignore
-  erblint:
-    name: "Lint / erblint"
+  haml-lint:
+    name: "Lint / HAML-Lint"
     runs-on: ubuntu-latest
-    needs: [generate]
+    needs: [ generate ]
     steps:
       - uses: actions/download-artifact@v3
         with:
-          name: generated_app
+          name: generated_app-vite
       - run: tar xfz generated_app.tgz
       - uses: ruby/setup-ruby@v1
         with:
           bundler-cache: true
-      - run: bin/erblint --lint-all
+      - run: bin/haml-lint
   eslint:
     name: "Lint / eslint"
     runs-on: ubuntu-latest
